src/tests/snapshots/gitu__tests__reverse__reverse_staged_delta.snap
---
source: src/tests/reverse.rs
expression: out
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
▌modified   file-one                                                            |
▌@@ -1,3 +1,3 @@                                                                |
▌-blahonga                                                                      |
▌+FOO                                                                           |
▌ BAR                                                                           |
▌ BAZ                                                                           |
                                                                                |
 Staged changes (1)                                                             |
 modified   file-one…                                                           |
                                                                                |
 Recent commits                                                                 |
 9f4a45e main add file-one                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --reverse                                                           |
styles_hash: 6797ec3eb33894d9

[file before]
blahonga
BAR
BAZ

[file after]
FOO
BAR
BAZ
