src/tests/snapshots/gitu__tests__reverse__reverse_staged_hunk.snap
---
source: src/tests/reverse.rs
expression: out
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   file-one                                                            |
▌@@ -1,3 +1,3 @@                                                                |
▌-blahonga                                                                      |
▌+FOO                                                                           |
▌ BAR                                                                           |
▌ BAZ                                                                           |
                                                                                |
 Staged changes (1)                                                             |
 modified   file-one                                                            |
 @@ -1,3 +1,3 @@                                                                |
 -FOO                                                                           |
 +blahonga                                                                      |
  BAR                                                                           |
  BAZ                                                                           |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --reverse                                                           |
styles_hash: 486d50ee55741be9

[file before]
blahonga
BAR
BAZ

[file after]
FOO
BAR
BAZ
