src/tests/snapshots/gitu__tests__reverse__reverse_staged_line.snap
---
source: src/tests/reverse.rs
expression: out
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   file-one                                                            |
 @@ -1,3 +1,4 @@                                                                |
▌+FOO                                                                           |
  blahonga                                                                      |
  BAR                                                                           |
  BAZ                                                                           |
                                                                                |
 Staged changes (1)                                                             |
 modified   file-one                                                            |
 @@ -1,3 +1,3 @@                                                                |
 -FOO                                                                           |
 +blahonga                                                                      |
  BAR                                                                           |
  BAZ                                                                           |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --reverse --recount                                                 |
styles_hash: c00d518da2606eda

[file before]
blahonga
BAR
BAZ

[file after]
FOO
blahonga
BAR
BAZ
