src/tests/snapshots/gitu__tests__reverse__reverse_unstaged_delta.snap
---
source: src/tests/reverse.rs
expression: out
---
 main                                                                           |
                                                                                |
 Recent commits                                                                 |
▌9f4a45e main add file-one                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --reverse                                                           |
styles_hash: 7ed5da9b7506002b

[file before]
blahonga
BAR
BAZ

[file after]
FOO
BAR
BAZ
