src/tests/snapshots/gitu__tests__reverse__reverse_unstaged_line.snap
---
source: src/tests/reverse.rs
expression: out
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   file-one                                                            |
▌@@ -1,3 +1,4 @@                                                                |
▌ FOO                                                                           |
▌+blahonga                                                                      |
▌ BAR                                                                           |
▌ BAZ                                                                           |
                                                                                |
 Recent commits                                                                 |
 9f4a45e main add file-one                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --reverse --recount                                                 |
styles_hash: ba008a94313ba45

[file before]
blahonga
BAR
BAZ

[file after]
FOO
blahonga
BAR
BAZ
